# grip-mixed

./: .gitignore  README.md  Snakefile  main.py  mixed-processing.ipynb  pyproject.toml
docker/: Dockerfile
envs/: grip-mixed.yaml
profile/: config.yaml
profiles/: config.yaml
