[project]
name = "grip-mixed"
version = "0.1.0"
description = "Processing pipeline for the Mixed IR/SE MR-sequence for use in gMRI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click",
  "gmri2fem>=0.2.0",
  "matplotlib",
  "numpy",
  "pandas",
  "snakemake>=7",
]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]
